--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,7 @@ h3 {
     background: dodgerblue url(./imgs/peter-robbins-background.jpg) no-repeat right center;
     background-size: auto;
     display: flex;
-    height: 100%;
-    width: 100%;
+    min-height: 100vh;
 }
 #left-side{
     border: 1px solid lightcoral;
@@ -24,6 +23,8 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+    padding: 16px 0;
 }
 .logo-wrapper{
     background-color: rgba(0,0,0,0.5);
@@ -34,6 +35,14 @@ h3 {
 .logo-wrapper img {
     width: 60%;
 }
+#left-side span{
+    font-size: 0.7rem;
+    color: white;
+    margin-top: auto;
+}
+#left-side span a{
+    color: white;
+}
 #right-side{
     background-color: rgb(243, 243, 243);
     box-shadow: -10px 0 10px rgba(0,0,0,0.5);
@@ -41,6 +50,7 @@ h3 {
     padding: 40px 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 .title-wrapper,
 .form-wrapper{
@@ -57,11 +67,16 @@ h3 {
 .title-wrapper > p:first-child{
     margin-top: 0;
 }
+.title-wrapper > p:last-child{
+    margin-bottom: 50px;
+}
 
 .form-wrapper{
     background-color: white;
     padding: 20px 40px;
     padding-bottom: 30px;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+    margin-bottom: 30px;
 }
 .form-wrapper > h3{
     margin-bottom: 30px;
@@ -84,17 +99,46 @@ label {
 }
 input{
     padding: 8px;
+    border: 1px solid #E5E7EB;
+    border-radius: 6px;
+}
+input:focus{
+    outline: 1px solid dodgerblue;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.2);
+}
+input:invalid{
+    border-color: red;
+}
+input[type="submit"]{
+    background-color: #596D48;
+    color: white;
+    font-size: 0.9rem;
+    font-weight: 700;
+    padding: 10px 40px;
+    margin-bottom: 20px;
+}
+.login-wrapper{
+    padding: 0 40px;
+}
+.login-wrapper a{
+    color:black;
+    text-decoration: none;
 }
 
 @media (min-width: 1024px) {
     .title-wrapper {
-        width: 60%;
+        width: 80%;
     }
     form{
         width: 70%;
     }
     .input-group{
         flex-basis: 40%;
+    }
+}
+@media (min-width: 1440px) {
+    .title-wrapper {
+        width: 60%;
     }
 }
 @media (min-width: 720px) {
